--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
@@ -46,6 +46,7 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+			<version>2.1.214</version>
 		</dependency>
 	</dependencies>
 
@@ -56,7 +57,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
-					<excludeDevtools>false</excludeDevtools>
+<!--					<excludeDevtools>false</excludeDevtools>-->
 				</configuration>
 			</plugin>
 		</plugins>
