--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -2,31 +2,41 @@ name: deploy-aws
 on: [push]
 
 jobs:
-    deploy:
-        name: Deploy to AWS
-        runs-on: ubuntu-latest
-        steps:
-            - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v1
-              with:
-                  aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
-                  aws-session-token: ${{ secrets.SESSION_TOKEN }}
-                  aws-region: us-east-1
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v2
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
+  #     - name: Build Docker image
+  #       run: docker build . --file Dockerfile --tag csg6-agendaacademicaintegrada:$(date +%s)
 
-            - name: Checkout
-              uses: actions/checkout@v2
+  deploy:
+      name: Deploy to AWS
+      runs-on: ubuntu-latest
+      steps:
+          - name: Configure AWS credentials
+            uses: aws-actions/configure-aws-credentials@v1
+            with:
+                aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+                aws-session-token: ${{ secrets.SESSION_TOKEN }}
+                aws-region: us-east-1
 
-            - name: Upload to S3
-              run: |
-                mkdir deployment
-                rsync -Rr . deployment
-                zip -r codedeploy-example-master.zip deployment
-                aws s3 cp codedeploy-example-master.zip s3://${{ secrets.S3_BUCKET }}/
+          - name: Checkout
+            uses: actions/checkout@v2
 
-            - name: Create deployment
-              run: |
-                aws deploy create-deployment --application-name codedeploy-2 \
-                    --deployment-config-name CodeDeployDefault.OneAtATime \
-                    --deployment-group-name producao-2 \
-                    --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=codedeploy-example-master.zip
+          - name: Upload to S3
+            run: |
+              mkdir deployment
+              rsync -Rr . deployment
+              zip -r codedeploy-example-master.zip deployment
+              aws s3 cp codedeploy-example-master.zip s3://${{ secrets.S3_BUCKET }}/
+
+          - name: Create deployment
+            run: |
+              aws deploy create-deployment --application-name codedeploy-2 \
+                  --deployment-config-name CodeDeployDefault.OneAtATime \
+                  --deployment-group-name producao-2 \
+                  --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=codedeploy-example-master.zip
