--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -31,12 +31,12 @@ jobs:
             run: |
               mkdir deployment
               rsync -Rr . deployment
-              zip -r codedeploy-example-master.zip deployment
-              aws s3 cp codedeploy-example-master.zip s3://${{ secrets.S3_BUCKET }}/
+              zip -r deployment.zip deployment
+              aws s3 cp deployment.zip s3://${{ secrets.S3_BUCKET }}/
 
           - name: Create deployment
             run: |
               aws deploy create-deployment --application-name codedeploy-2 \
                   --deployment-config-name CodeDeployDefault.OneAtATime \
                   --deployment-group-name producao-2 \
-                  --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=codedeploy-example-master.zip
+                  --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=deployment.zip
