--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -1,16 +1,26 @@
 name: deploy-aws
-on: [push]
+on: 
+  push:
+      branches:
+        - develop
 
 jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Code
-  #       uses: actions/checkout@v2
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
-  #     - name: Build Docker image
-  #       run: docker build . --file Dockerfile --tag csg6-agendaacademicaintegrada:$(date +%s)
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+            distribution: 'adopt'
+            java-version: '17'
+      - name: Build with Maven
+        run: mvn clean install
+
+      - name: Run tests
+        run: mvn test
 
   deploy:
       name: Deploy to AWS
@@ -30,7 +40,7 @@ jobs:
           - name: Upload to S3
             run: |
               mkdir deployment
-              rsync -Rr . deployment
+              rsync -Rr target/agendaAcademica.jar deployment
               zip -r deployment.zip deployment
               aws s3 cp deployment.zip s3://${{ secrets.S3_BUCKET }}/
 
