--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -41,7 +41,7 @@ jobs:
           - name: Upload to S3
             run: |
               mkdir deployment
-              rsync -Rr ./target/agendaAcademica.jar deployment
+              rsync -Rr . deployment
               zip -r deployment.zip deployment
               aws s3 cp deployment.zip s3://${{ secrets.S3_BUCKET }}/
 
