--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -42,7 +42,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ../../Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_REPO_TAG }}
 
