--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -52,7 +52,7 @@ jobs:
           docker buildx create --use
           docker buildx inspect --bootstrap
 
-          docker buildx build -t $DOCKERHUB_REPO_TAG:latest -t $DOCKERHUB_REPO_TAG:$GITHUB_SHA --push .
+          docker buildx build -t ${{ secrets.DOCKERHUB_REPO_TAG }}:v2 -t ${{ secrets.DOCKERHUB_REPO_TAG }}:$GITHUB_SHA --push .
 
         # name: Build and push
         # uses: docker/build-push-action@v5
