--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -26,15 +26,18 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      # -
-      #   name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v3
       - 
         name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          version: v3.0.0
+
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
