--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 <!--					<excludeDevtools>false</excludeDevtools>-->
 				</configuration>
 			</plugin>
+			<plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <mainClass>com.agendaacademica.agendaapi.AgendaApiApplication</mainClass>
+            </configuration>
+        </plugin>
 		</plugins>
 	</build>
 
