--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -17,7 +17,7 @@ jobs:
             distribution: 'adopt'
             java-version: '17'
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean package
 
       - name: Run tests
         run: mvn test
