--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -26,9 +26,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Checkout Repository
-        uses: actions/checkout@v4
+      # - 
+      #   name: Checkout Repository
+      #   uses: actions/checkout@v4
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -50,32 +50,32 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_REPO_TAG }}:latest
 
-  deploy:
-      needs: docker
-      name: Deploy to AWS
-      runs-on: ubuntu-latest
-      steps:
-          - name: Configure AWS credentials
-            uses: aws-actions/configure-aws-credentials@v1
-            with:
-                aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
-                aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
-                aws-session-token: ${{ secrets.SESSION_TOKEN }}
-                aws-region: us-east-1
+  # deploy:
+  #     needs: docker
+  #     name: Deploy to AWS
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #         - name: Configure AWS credentials
+  #           uses: aws-actions/configure-aws-credentials@v1
+  #           with:
+  #               aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
+  #               aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+  #               aws-session-token: ${{ secrets.SESSION_TOKEN }}
+  #               aws-region: us-east-1
 
-          - name: Checkout
-            uses: actions/checkout@v4
+  #         - name: Checkout
+  #           uses: actions/checkout@v4
 
-          - name: Upload to S3
-            run: |
-              mkdir deployment
-              rsync -Rr . deployment
-              zip -r deployment.zip deployment
-              aws s3 cp deployment.zip s3://${{ secrets.S3_BUCKET }}/
+  #         - name: Upload to S3
+  #           run: |
+  #             mkdir deployment
+  #             rsync -Rr . deployment
+  #             zip -r deployment.zip deployment
+  #             aws s3 cp deployment.zip s3://${{ secrets.S3_BUCKET }}/
 
-          - name: Create deployment
-            run: |
-              aws deploy create-deployment --application-name codedeploy-2 \
-                  --deployment-config-name CodeDeployDefault.OneAtATime \
-                  --deployment-group-name producao-2 \
-                  --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=deployment.zip
+  #         - name: Create deployment
+  #           run: |
+  #             aws deploy create-deployment --application-name codedeploy-2 \
+  #                 --deployment-config-name CodeDeployDefault.OneAtATime \
+  #                 --deployment-group-name producao-2 \
+  #                 --s3-location bucket=${{ secrets.S3_BUCKET }},bundleType=zip,key=deployment.zip
